FramesDirDataset: manage video images with a torch Dataset class.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -288,6 +288,7 @@
         "    ffmpeg_video_to_frames,\n",
         "    make_frames_with_tracks,\n",
         "    track,\n",
+        "    FramesDirDataset,\n",
         ")\n",
         "\n",
         "logging.basicConfig()\n",
@@ -687,30 +688,23 @@
       "source": [
         "#@markdown ### 4.1 - Run detection (option 1)\n",
         "\n",
-        "video_frames = sorted(glob.glob(os.path.join(FRAMES_DIR, '*.jpg')))\n",
-        "\n",
-        "if len(video_frames) == 0:\n",
+        "dataset = FramesDirDataset(FRAMES_DIR)\n",
+        "if len(dataset) == 0:\n",
         "    raise Exception(\n",
         "        \"No files in '%s'.  Did you run the previous section which converts\"\n",
         "        \" the video to frames?\" % FRAMES_DIR\n",
         "    )\n",
         "\n",
-        "detections, frame_id_to_filename = detect(\n",
-        "    video_frames,\n",
+        "detections = detect(\n",
+        "    dataset,\n",
         "    DETECTION_MODEL_CONFIG_PATH,\n",
         "    DETECTION_CLASS_IDX,\n",
         "    DETECTION_THRESHOLD,\n",
         ")\n",
         "\n",
         "with open(DETECTIONS_PKL_FPATH, 'wb') as fh:\n",
-        "    pickle.dump(\n",
-        "        {\n",
-        "            'detections': detections,\n",
-        "            'frame_id_to_filename': frame_id_to_filename,\n",
-        "        },\n",
-        "        fh,\n",
-        "    )\n",
-        "_logger.info('Detection results saved to \\'%s\\'', DETECTIONS_PKL_FPATH)"
+        "    pickle.dump({'detections': detections}, fh)\n",
+        "_logger.info(\"Detection results saved to '%s'\", DETECTIONS_PKL_FPATH)"
       ]
     },
     {
@@ -724,12 +718,16 @@
       "source": [
         "#@markdown ### 4.2 - Load previous detection results (option 2)\n",
         "\n",
+        "dataset = FramesDirDataset(FRAMES_DIR)\n",
+        "if len(dataset) == 0:\n",
+        "    raise Exception(\n",
+        "        \"No files in '%s'.  Did you run the previous section which converts\"\n",
+        "        \" the video to frames?\" % FRAMES_DIR\n",
+        "    )\n",
+        "\n",
         "with open(DETECTIONS_PKL_FPATH, 'rb') as fh:\n",
         "    loaded_detections = pickle.load(fh)\n",
-        "\n",
         "detections = loaded_detections['detections']\n",
-        "frame_id_to_filename = loaded_detections['frame_id_to_filename']\n",
-        "video_frames = list(frame_id_to_filename.values())\n",
         "\n",
         "_logger.info('Detection results loaded from \\'%s\\'', DETECTIONS_PKL_FPATH)"
       ]
@@ -764,35 +762,19 @@
       "source": [
         "#@markdown ### 5.1 - Run tracking (option 1)\n",
         "\n",
-        "tracks = track(\n",
-        "    detections,\n",
-        "    frame_id_to_filename,\n",
-        "    TRACKING_MODEL_PATH,\n",
-        ")\n",
-        "\n",
-        "# XXX: So far we've been using absolute filepaths.  However, in the\n",
-        "# exported VIA project we want to use the filename only so that the\n",
-        "# images can be found by setting the project \"Default Path\".  This\n",
-        "# hack changes the filepath in the SVT internals.\n",
-        "tracks.frame_id_to_filename_map = {\n",
-        "    k: os.path.basename(v)\n",
-        "    for k, v in tracks.frame_id_to_filename_map.items()\n",
-        "}\n",
+        "tracks = track(dataset, detections, TRACKING_MODEL_PATH)\n",
         "\n",
         "tracks.export_via_project(\n",
         "    RESULTS_VIA_FPATH,\n",
-        "    config={'frame_img_dir': FRAMES_DIR, 'via_project_name': ''},\n",
+        "    config={\n",
+        "        'frame_img_dir': dataset.frames_dir,\n",
+        "        'via_project_name': '',\n",
+        "    },\n",
         ")\n",
         "tracks.export_plain_csv(RESULTS_CSV_FPATH, {})\n",
         "\n",
         "with open(TRACKS_PKL_FPATH, 'wb') as fh:\n",
-        "    pickle.dump(\n",
-        "        {\n",
-        "            'tracks': tracks,\n",
-        "            'frame_id_to_filename': frame_id_to_filename,\n",
-        "        },\n",
-        "        fh,\n",
-        "    )\n",
+        "    pickle.dump({'tracks': tracks}, fh)\n",
         "_logger.info('Tracking results saved to \\'%s\\'', TRACKS_PKL_FPATH)"
       ]
     },
@@ -809,10 +791,7 @@
         "\n",
         "with open(TRACKS_PKL_FPATH, 'rb') as fh:\n",
         "    loaded_tracks = pickle.load(fh)\n",
-        "\n",
         "tracks = loaded_tracks['tracks']\n",
-        "frame_id_to_filename = loaded_tracks['frame_id_to_filename']\n",
-        "video_frames = list(frame_id_to_filename.values())\n",
         "\n",
         "_logger.info('Tracking results loaded from \\'%s\\'', TRACKS_PKL_FPATH)"
       ]
@@ -856,7 +835,7 @@
         "#@markdown is released.  Expect a couple of seconds wait for the frame\n",
         "#@markdown to be updated.\n",
         "\n",
-        "display_detections(frame_id_to_filename, tracks.detection_data['0'])"
+        "display_detections(dataset, tracks.detection_data['0'])"
       ]
     },
     {
