Export detections before tracking as its own VIA project (#12)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -112,11 +112,15 @@
         "- `detections.pkl` - the initial detections in [Python's pickle\n",
         "  format](https://docs.python.org/3/library/pickle.html).\n",
         "\n",
+        "- `detections-via.json` - the initial detections as a\n",
+        "  [VIA 2](https://www.robots.ox.ac.uk/~vgg/software/via/) project.\n",
+        "  This requires the images in the `frames` directory.\n",
+        "\n",
         "- `tracks.pkl` - the detected tracks in [Python's pickle\n",
         "  format](https://docs.python.org/3/library/pickle.html).\n",
         "\n",
-        "- `results-via-project.json` - the final detections as a\n",
-        "  [VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) project.  This\n",
+        "- `results-via-project.json` - the final detections as a [VIA\n",
+        "  2](https://www.robots.ox.ac.uk/~vgg/software/via/) project.  This\n",
         "  requires the images in the `frames` directory.\n",
         "\n",
         "- `results.csv` - the final detections in CSV format.\n",
@@ -268,6 +272,7 @@
         "!pip install --quiet git+https://github.com/ox-vgg/follow-things-around.git\n",
         "\n",
         "import glob\n",
+        "import json\n",
         "import logging\n",
         "import os\n",
         "import os.path\n",
@@ -290,6 +295,7 @@
         "    track,\n",
         "    FramesDirDataset,\n",
         ")\n",
+        "from follow_things_around.via import detections_to_via2\n",
         "\n",
         "logging.basicConfig()\n",
         "_logger = logging.getLogger()"
@@ -567,6 +573,7 @@
         "\n",
         "FRAMES_DIR = os.path.join(RESULTS_DIRECTORY, 'frames')\n",
         "DETECTIONS_PKL_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections.pkl')\n",
+        "DETECTIONS_VIA_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections-via.json')\n",
         "TRACKS_PKL_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.pkl')\n",
         "RESULTS_VIA_FPATH = os.path.join(RESULTS_DIRECTORY, 'results-via-project.json')\n",
         "RESULTS_CSV_FPATH = os.path.join(RESULTS_DIRECTORY, 'results.csv')\n",
@@ -704,7 +711,11 @@
         "\n",
         "with open(DETECTIONS_PKL_FPATH, 'wb') as fh:\n",
         "    pickle.dump({'detections': detections}, fh)\n",
-        "_logger.info(\"Detection results saved to '%s'\", DETECTIONS_PKL_FPATH)"
+        "_logger.info(\"Detection results saved to '%s'\", DETECTIONS_PKL_FPATH)\n",
+        "\n",
+        "with open(DETECTIONS_VIA_FPATH, 'w') as fh:\n",
+        "    json.dump(detections_to_via2(dataset, detections), fh)\n",
+        "_logger.info(\"Detection VIA project saved to '%s'\", DETECTIONS_VIA_FPATH)"
       ]
     },
     {
