Use detectron2 PathManager to download remote config and model files.
Detectron2 config files and svt and detectron2 weight files can be
specified as URLs.  We downloaded the fike ourselves.  It didn't
delete the temporary files and always downloaded a new one.  Because
the file names were random it was difficult to know where it came from
the logs and it missed th file extension that some functions that
would read them relied on.  It was also duplicated between the
tracking.ipynb and __main__.py.  These were all fixable but we can
just use detectron2 PathManager.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -494,10 +494,10 @@
         "#@markdown Leave this empty to use the pre-configured model to detect\n",
         "#@markdown the `THING_TO_TRACK` choosen in Section 2.4.\n",
         "\n",
-        "DETECTION_MODEL_CONFIG = ''  #@param {type: \"string\"}\n",
+        "DETECTION_MODEL_CONFIG_URL = ''  #@param {type: \"string\"}\n",
         "DETECTION_CLASS_IDX = 0\n",
-        "if not DETECTION_MODEL_CONFIG:\n",
-        "    DETECTION_MODEL_CONFIG = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"config-url\"]\n",
+        "if not DETECTION_MODEL_CONFIG_URL:\n",
+        "    DETECTION_MODEL_CONFIG_URL = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"config-url\"]\n",
         "    DETECTION_CLASS_IDX = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"class-idx\"]\n",
         "\n",
         "#@markdown When the model detects something, that detection is\n",
@@ -530,7 +530,7 @@
         "#@markdown one](https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth).\n",
         "#@markdown Alternatively, you can also specify a path in your Google\n",
         "#@markdown Drive.\n",
-        "TRACKING_MODEL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth'  #@param {type: \"string\"}\n",
+        "TRACKING_MODEL_URL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth'  #@param {type: \"string\"}\n",
         "\n",
         "MATCH_OVERLAP_THRESHOLD = 0.2  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
         "\n",
@@ -599,21 +599,6 @@
         "\n",
         "# Required to display the tracking results with plotly or matplotlib.\n",
         "google.colab.output.enable_custom_widget_manager()\n",
-        "\n",
-        "\n",
-        "def local_path_for_model(path: str) -> str:\n",
-        "    if path.startswith('https://'):\n",
-        "        downloaded_fh = tempfile.NamedTemporaryFile(delete=False)\n",
-        "        r = requests.get(path)\n",
-        "        downloaded_fh.write(r.content)\n",
-        "        downloaded_fh.flush()\n",
-        "        return downloaded_fh.name\n",
-        "    else:\n",
-        "        return path\n",
-        "\n",
-        "\n",
-        "DETECTION_MODEL_CONFIG_PATH = local_path_for_model(DETECTION_MODEL_CONFIG)\n",
-        "TRACKING_MODEL_PATH = local_path_for_model(TRACKING_MODEL)\n",
         "\n",
         "\n",
         "follow_things_around.DEFAULT_DEVICE = DEFAULT_DEVICE\n",
@@ -704,7 +689,7 @@
         "\n",
         "detections = detect(\n",
         "    dataset,\n",
-        "    DETECTION_MODEL_CONFIG_PATH,\n",
+        "    DETECTION_MODEL_CONFIG_URL,\n",
         "    DETECTION_CLASS_IDX,\n",
         "    DETECTION_THRESHOLD,\n",
         ")\n",
@@ -773,7 +758,7 @@
       "source": [
         "#@markdown ### 5.1 - Run tracking (option 1)\n",
         "\n",
-        "tracks = track(dataset, detections, TRACKING_MODEL_PATH)\n",
+        "tracks = track(dataset, detections, TRACKING_MODEL_URL)\n",
         "\n",
         "tracks.export_via_project(\n",
         "    RESULTS_VIA_FPATH,\n",
