make_video_with_tracks: remove duplicated code in notebook and __main__

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -277,8 +277,6 @@
         "import os\n",
         "import os.path\n",
         "import pickle\n",
-        "import shutil\n",
-        "import tempfile\n",
         "\n",
         "import google.colab.drive\n",
         "import google.colab.output\n",
@@ -289,9 +287,8 @@
         "from follow_things_around import (\n",
         "    detect,\n",
         "    display_detections,\n",
-        "    ffmpeg_video_from_frames_and_video,\n",
         "    ffmpeg_video_to_frames,\n",
-        "    make_frames_with_tracks,\n",
+        "    make_video_with_tracks,\n",
         "    track,\n",
         "    FramesDirDataset,\n",
         ")\n",
@@ -900,14 +897,9 @@
         "#@markdown superimposed.  The video file will be named `tracks.mp4`\n",
         "#@markdown and saved in the `RESULTS_DIRECTORY` in your Google Drive.\n",
         "\n",
-        "with tempfile.TemporaryDirectory() as out_frames_dir:\n",
-        "    tmp_tracks_fpath = os.path.join(out_frames_dir, 'tracks.mp4')\n",
-        "    make_frames_with_tracks(RESULTS_CSV_FPATH, FRAMES_DIR, out_frames_dir)\n",
-        "    ffmpeg_video_from_frames_and_video(\n",
-        "        out_frames_dir, VIDEO_FILE, tmp_tracks_fpath\n",
-        "    )\n",
-        "    shutil.move(tmp_tracks_fpath, TRACKS_VIDEO_FPATH)\n",
-        "\n",
+        "make_video_with_tracks(\n",
+        "    VIDEO_FILE, TRACKS_VIDEO_FPATH, FRAMES_DIR, RESULTS_CSV_FPATH\n",
+        ")\n",
         "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)"
       ]
     }
