Move jupyter widgets to a separate module and make its dependencies optional.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -269,7 +269,7 @@
         "\n",
         "# Finally, Follow-Things-Around\n",
         "print(\"Installing Follow-Things-Around\")\n",
-        "!pip install --quiet git+https://github.com/ox-vgg/follow-things-around.git\n",
+        "!pip install --quiet 'follow-things-around[widgets] @ git+https://github.com/ox-vgg/follow-things-around.git'\n",
         "\n",
         "import glob\n",
         "import json\n",
@@ -286,13 +286,13 @@
         "import follow_things_around\n",
         "from follow_things_around import (\n",
         "    detect,\n",
-        "    display_detections,\n",
         "    ffmpeg_video_to_frames,\n",
         "    make_video_with_tracks,\n",
         "    track,\n",
         "    FramesDirDataset,\n",
         ")\n",
         "from follow_things_around.via import detections_to_via2\n",
+        "from follow_things_around.widgets import display_detections\n",
         "\n",
         "logging.basicConfig()\n",
         "_logger = logging.getLogger()"
