pyproject.tml: new extra when installing in Google Colab.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -269,7 +269,7 @@
         "\n",
         "# Finally, Follow-Things-Around\n",
         "print(\"Installing Follow-Things-Around\")\n",
-        "!pip install --quiet 'follow-things-around[widgets] @ git+https://github.com/ox-vgg/follow-things-around.git'\n",
+        "!pip install --quiet 'follow-things-around[colab] @ git+https://github.com/ox-vgg/follow-things-around.git'\n",
         "\n",
         "import glob\n",
         "import json\n",
