detectron2: replace YACS based configs to the new LazyConfigs and new models
Detectron2 released new baselines with much higher AP for the COCO
classes but the config for these are only available using their new
LazyConfig.  These new baselines are also only for Mask-RCNN.  So we
replaced our config files with LazyConfig and trained new models for
chimpanzee faces and bodies.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -354,56 +354,56 @@
         "#@markdown Do not forget to \"run\" this cell after making your\n",
         "#@markdown selection.\n",
         "\n",
-        "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
+        "THING_TO_TRACK = \"Chimpanzee faces\"  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
         "\n",
         "THING_TO_MODEL_CONFIG = {\n",
-        "    \"Chimpanzee faces\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml\",\n",
-        "        \"class-idx\" : 0,\n",
+        "    \"Chimpanzee faces\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_LSJ-CFbootstrap.py\",\n",
+        "        \"class-idx\": 0,\n",
         "    },\n",
-        "    \"Chimpanzee bodies\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-imdb_5k_sup.yaml\",\n",
-        "        \"class-idx\" : 0,\n",
+        "    \"Chimpanzee bodies\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_LSJ-imdb_5k_sup.py\",\n",
+        "        \"class-idx\": 0,\n",
         "    },\n",
-        "    \"Birds\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 14,\n",
+        "    \"Birds\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 14,\n",
         "    },\n",
-        "    \"Cats\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 15,\n",
+        "    \"Cats\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 15,\n",
         "    },\n",
-        "    \"Dogs\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 16,\n",
+        "    \"Dogs\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 16,\n",
         "    },\n",
-        "    \"Horses\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 17,\n",
+        "    \"Horses\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 17,\n",
         "    },\n",
-        "    \"Sheep\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 18,\n",
+        "    \"Sheep\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 18,\n",
         "    },\n",
-        "    \"Cows\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 19,\n",
+        "    \"Cows\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 19,\n",
         "    },\n",
-        "    \"Elephants\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 20,\n",
+        "    \"Elephants\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 20,\n",
         "    },\n",
-        "    \"Bears\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 21,\n",
+        "    \"Bears\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 21,\n",
         "    },\n",
-        "    \"Zebras\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 22,\n",
+        "    \"Zebras\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 22,\n",
         "    },\n",
-        "    \"Giraffes\" : {\n",
-        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
-        "        \"class-idx\" : 23,\n",
+        "    \"Giraffes\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_400ep_LSJ-coco2017.py\",\n",
+        "        \"class-idx\": 23,\n",
         "    },\n",
         "}\n",
         "\n",
@@ -507,7 +507,7 @@
         "#@markdown lead to false tracks that need to be manually removed\n",
         "#@markdown later.\n",
         "\n",
-        "DETECTION_THRESHOLD = 0.6  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
+        "DETECTION_THRESHOLD = 0.9  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
       ]
     },
     {
