detect: do not filter detections by confidence score.
We want to be able to filter detections by confidence score but we
also want to export all detections, even those below the threshold, to
a VIA project for debugging.  Also, we later will want to reuse
previous detections results for tracking with different threshold
values.  So we can't perform the filtering inside `detect()`.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -287,6 +287,7 @@
         "from follow_things_around import (\n",
         "    detect,\n",
         "    ffmpeg_video_to_frames,\n",
+        "    filter_detections,\n",
         "    make_video_with_tracks,\n",
         "    track,\n",
         "    FramesDirDataset,\n",
@@ -499,11 +500,12 @@
         "\n",
         "#@markdown When the model detects something, that detection is\n",
         "#@markdown made with a confidence score.  Detections with a confidence\n",
-        "#@markdown score lower than the threshold are ignored.  If you set the\n",
-        "#@markdown threshold too high, you may miss detections in some frames\n",
-        "#@markdown which need to be filled by the tracker..  If you set it too\n",
-        "#@markdown low, false detections will lead to false tracks that need\n",
-        "#@markdown to be manually removed later.\n",
+        "#@markdown score lower than the threshold will be ignored during\n",
+        "#@markdown tracking.  If you set the threshold too high, you may miss\n",
+        "#@markdown detections in some frames which need to be filled by the\n",
+        "#@markdown tracker..  If you set it too low, false detections will\n",
+        "#@markdown lead to false tracks that need to be manually removed\n",
+        "#@markdown later.\n",
         "\n",
         "DETECTION_THRESHOLD = 0.6  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
       ]
@@ -684,12 +686,7 @@
         "        \" the video to frames?\" % FRAMES_DIR\n",
         "    )\n",
         "\n",
-        "detections = detect(\n",
-        "    dataset,\n",
-        "    DETECTION_MODEL_CONFIG_URL,\n",
-        "    DETECTION_CLASS_IDX,\n",
-        "    DETECTION_THRESHOLD,\n",
-        ")\n",
+        "detections = detect(dataset, DETECTION_MODEL_CONFIG_URL, DETECTION_CLASS_IDX)\n",
         "\n",
         "with open(DETECTIONS_PKL_FPATH, 'wb') as fh:\n",
         "    pickle.dump({'detections': detections}, fh)\n",
@@ -755,7 +752,11 @@
       "source": [
         "#@markdown ### 5.1 - Run tracking (option 1)\n",
         "\n",
-        "tracks = track(dataset, detections, TRACKING_MODEL_URL)\n",
+        "tracks = track(\n",
+        "    dataset,\n",
+        "    filter_detections(detections, DETECTION_THRESHOLD),\n",
+        "    detections,\n",
+        ")\n",
         "\n",
         "tracks.export_via_project(\n",
         "    RESULTS_VIA_FPATH,\n",
