tracking.ipynb: fix tracking step - wrong variable name (fixup 98a34904)(issue #14)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -755,7 +755,7 @@
         "tracks = track(\n",
         "    dataset,\n",
         "    filter_detections(detections, DETECTION_THRESHOLD),\n",
-        "    detections,\n",
+        "    TRACKING_MODEL_URL,\n",
         ")\n",
         "\n",
         "tracks.export_via_project(\n",
