Add detector configuration for Orangutan faces

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -354,11 +354,15 @@
         "#@markdown Do not forget to \"run\" this cell after making your\n",
         "#@markdown selection.\n",
         "\n",
-        "THING_TO_TRACK = \"Chimpanzee faces\"  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
+        "THING_TO_TRACK = \"Chimpanzee faces\"  #@param [\"Chimpanzee faces\", \"Orangutan faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
         "\n",
         "THING_TO_MODEL_CONFIG = {\n",
         "    \"Chimpanzee faces\": {\n",
         "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_LSJ-CFbootstrap.py\",\n",
+        "        \"class-idx\": 0,\n",
+        "    },\n",
+        "    \"Orangutan faces\": {\n",
+        "        \"config-url\": \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/mask_rcnn_R_50_FPN_LSJ-orangutan-faces.py\",\n",
         "        \"class-idx\": 0,\n",
         "    },\n",
         "    \"Chimpanzee bodies\": {\n",
